cloud/network/route_table_assoc.tf
locals {
  public_rt_assoc_data      = local.public_subnets_data
  application_rt_assoc_data = local.application_subnets_data
  data_rt_assoc_data        = local.data_subnets_data
}

# ref: https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table_association
resource "aws_route_table_association" "public_rt_assoc" {
  for_each       = { for key in local.public_rt_assoc_data : key.cidr_block => key }
  route_table_id = aws_route_table.public_rt[each.key].id
  subnet_id      = aws_subnet.public[each.key].id
}

resource "aws_route_table_association" "application_rt_assoc" {
  for_each       = { for key in local.application_rt_assoc_data : key.cidr_block => key }
  route_table_id = aws_route_table.application_rt[each.key].id
  subnet_id      = aws_subnet.application[each.key].id
}

resource "aws_route_table_association" "data_rt_assoc" {
  for_each       = { for key in local.data_rt_assoc_data : key.cidr_block => key }
  route_table_id = aws_route_table.data_rt[each.key].id
  subnet_id      = aws_subnet.data[each.key].id
}
